# protohackers

./: Cargo.toml
.github/workflows/: rust.yml
budget_chat/: Cargo.toml
budget_chat/src/: main.rs
echo/: Cargo.toml
line_reversal/: Cargo.toml
line_reversal/src/: main.rs  reader.rs  reverse.rs  session.rs  writer.rs
lrcp_client/: Cargo.toml
lrcp_client/src/: arguments.rs  main.rs
lrcp_codec/: Cargo.toml
lrcp_codec/src/: codec.rs  escape.rs  frame.rs  lib.rs  unescape.rs
mb/: Cargo.toml
mob_in_the_middle/: Cargo.toml
mob_in_the_middle/src/: bogus.rs  main.rs  message.rs  proxy.rs
netcrab/: Cargo.toml
netcrab/src/: arguments.rs  main.rs
primes_service/: Cargo.toml
speedd/: Cargo.toml
speedd/src/: camera.rs  client.rs  collector.rs  dispatcher.rs  heartbeat.rs  main.rs  request.rs  server.rs
speedd/src/camera/: mod.rs
speedd/src/client/: decoder.rs  encoder.rs  mod.rs
speedd/src/dispatcher/: mod.rs
speedd/src/server/: decoder.rs  encoder.rs  mod.rs
speedd_benchy/: .gitignore  Cargo.toml  landscape.toml
speedd_benchy/src/: arguments.rs  camera_client.rs  landscape.rs  main.rs  sequence.rs
speedd_clients/: Cargo.toml
speedd_clients/src/: arguments.rs  main.rs
speedd_codecs/: Cargo.toml
speedd_codecs/src/: camera.rs  lib.rs  plate.rs
speedd_codecs/src/client/: decoder.rs  encoder.rs  mod.rs
speedd_codecs/src/server/: decoder.rs  encoder.rs  mod.rs
src/: lib.rs
time_price/: Cargo.toml
time_price/src/: db.rs  main.rs  mean.rs  request.rs  response.rs
unusual_db/: Cargo.toml
unusual_db/src/: db.rs  main.rs  message.rs
