[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pricetime"
path = "bin/pricetime/main.rs"

[dependencies]
anyhow = "1.0.68"
bytes = "1.4.0"
futures = "0.3.26"
primal = "0.3.2"
serde = { version = "1.0.152", features = ["derive"] }
serde-jsonlines = { version = "0.4.0", features = ["async"] }
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["full"] }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["codec"] }
