[package]
name = "line_reversal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bytes = "1.8.0"
futures-util = { version = "0.3.31", features = ["sink"] }
itertools = "0.10.5"
lrcp_codec = { path = "../lrcp_codec" }
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["codec", "net"] }
tracing = "0.1.40"
tracing-log = "0.1.4"
tracing-subscriber = "0.3.18"
