[package]
name = "lrcp_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
futures = "0.3.26"
lrcp_codec = { path = "../lrcp_codec" }
ron = "0.8"
rustyline = "11.0.0"
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
