[package]
name = "mob_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bytes = "1.8.0"
futures = "0.3.31"
lazy_static = "1.5.0"
regex = "1.11.1"
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
