[package]
name = "primes_service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
futures = "0.3.31"
primal = "0.3.3"
serde = { version = "1.0.214", features = ["derive"] }
serde-jsonlines = { version = "0.4.0", features = ["async"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tokio-stream = "0.1.16"
