[package]
name = "speedd"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tokio-test = "0.4.2"

[dependencies]
anyhow = "1.0.68"
bytes = "1.4.0"
futures = "0.3.26"
itertools = "0.10.5"
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
