[package]
name = "speedd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
async-channel = "1.9.0"
bytes = "1.8.0"
futures = "0.3.31"
itertools = "0.10.5"
speedd_codecs = { path = "../speedd_codecs" }
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
