[package]
name = "speedd_benchy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.10.2"
futures = "0.3.31"
futures-util = "0.3.31"
humantime-serde = "1.1.1"
itertools = "0.10.5"
log = "0.4.22"
rand = "0.8.5"
ron = "0.8"
serde = { version = "1.0.214", features = ["derive"] }
speedd_codecs = { path = "../speedd_codecs" }
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
toml = "0.7.8"
