[package]
name = "speedd_clients"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
futures = "0.3.26"
humantime = "2.1.0"
itertools = "0.10.5"
ron = "0.8"
rustyline = "11.0.0"
speedd_codecs = { path = "../speedd_codecs" }
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
