[package]
name = "speedd_codecs"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tokio-test = "0.4.2"
tokio = { version = "1", features = ["full"] }
futures = "0.3.26"

[dependencies]
anyhow = "1.0.68"
bytes = "1.4.0"
itertools = "0.10.5"
serde = { version = "1", features = ["derive"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
