[package]
name = "speedd_codecs"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.4"

[dependencies]
anyhow = "1.0.93"
bytes = "1.8.0"
itertools = "0.10.5"
serde = { version = "1", features = ["derive"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
